Add new table and route to separate Comment from Post, and add a title to Post, change test and seeds to adapt
